Refactored map creation, readFile and updated readme